# AI

./: README.md
mcp/weather-chat_mcp/: README.md  host.py  page_rag.py  pyproject.toml  weather_Israel.py
rag/: README.md  agent.py  main.py  prepare.py  pyproject.toml  structured_data.json  structured_data.py  workflow.py
text_to_commands/: README.md  app.py  eval_quick.py  main.py
text_to_commands/t2c/: __init__.py  client.py  config.py  parser.py  pipeline.py  prompts.py  schema.py
