[project]
name = "starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.0.0",
    "llama-index>=0.14.22",
    "llama-index-embeddings-cohere>=0.8.0",
    "llama-index-vector-stores-pinecone>=0.7.0",
    "netfree-unstrict-ssl==0.1.3",
    "pinecone>=7.0.0",
]
